Fix spacing between container one and two

--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -14,7 +14,7 @@ body {
   background: #e3f4ff;
   font-size: 16px;
   padding: 8px;
-  margin-top: auto;
+  margin: auto;
 }
 
 .content {
